--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "Show me your opinions",
   "main": "index.js",
   "scripts": {
-    "dev":"next",
-    "start":"next start",
-    "build":"next build"
+    "dev": "next",
+    "start": "next start",
+    "build": "next build"
   },
   "repository": {
     "type": "git",
@@ -20,8 +20,11 @@
   },
   "homepage": "https://github.com/TonRockets/your-minds#readme",
   "dependencies": {
+    "autoprefixer": "^10.0.2",
     "next": "^10.0.3",
+    "postcss": "^8.1.10",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "react-dom": "^17.0.1",
+    "tailwindcss": "^2.0.1"
   }
 }
