--- a/package.json
+++ b/package.json
@@ -21,10 +21,12 @@
   "homepage": "https://github.com/TonRockets/your-minds#readme",
   "dependencies": {
     "autoprefixer": "^10.0.2",
+    "google-spreadsheet": "^3.1.15",
     "next": "^10.0.3",
     "postcss": "^8.1.10",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "swr": "^0.4.2",
     "tailwindcss": "^2.0.1"
   }
 }
