--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "autoprefixer": "^10.0.2",
     "google-spreadsheet": "^3.1.15",
+    "moment": "^2.29.1",
     "next": "^10.0.3",
     "postcss": "^8.1.10",
     "react": "^17.0.1",
